--- a/dlls/amstream/tests/Makefile.in
+++ b/dlls/amstream/tests/Makefile.in
@@ -1,5 +1,5 @@
 TESTDLL   = amstream.dll
-IMPORTS   = strmiids uuid ddraw ole32 user32
+IMPORTS   = strmbase strmiids uuid ddraw ole32 user32
 
 C_SRCS = \
 	amstream.c
